# SAL

./: .clang-format  .gitignore  CMakeLists.txt  CONFIGURE_DEPENDS  LICENSE  README.md  sal.h  test.c  test2.c
.github/workflows/: linux-build.yml  linux.yml  windows.yml
include/: sal.h
tests/: test_sl_buf_to_native_uint.cpp  test_sl_buf_to_native_uint_nullbuf.cpp  test_sl_buf_to_native_uint_shortlen.cpp  test_sl_buf_to_native_ushort.cpp  test_sl_buf_to_native_ushort_nullbuf.cpp  test_sl_buf_to_native_ushort_shortlen.cpp  test_sl_endianness.cpp  test_sl_is_file_fail.cpp  test_sl_is_file_success.cpp  test_sl_is_wave_file_long.cpp  test_sl_is_wave_file_long2.cpp  test_sl_is_wave_file_not_a_file.cpp  test_sl_is_wave_file_not_a_wav.cpp  test_sl_is_wave_file_short.cpp  test_sl_is_wave_file_short2.cpp  test_sl_version.cpp  test_wave_extension_long.cpp  test_wave_extension_short.cpp
tests/play sound/: test.c
